[tool.poetry]
name = "hanalon"
version = "0.0.2"
description = "An RPG Discord bot."
authors = ["pyxiis", "Noyx46", "AlankarSovani", "DiggetyDoo"]

[tool.poetry.dependencies]
python = "^3.9"
d20 = "*"
dill = "*"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
discord-ext-slash = "*"
"discord.py" = "*"
dnspython = "*"
PyYAML = "*"
motor = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pre-commit = "*"

[tool.isort]
profile = "black"
force_sort_within_sections = "True"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88

[tool.black]
fast = "True"
