[tool.poetry]
name = "hanalon"
version = "0.1.1"
description = "An RPG Discord bot."
authors = ["pyxiis", "Noyx46", "DiggetyDoo", "AlankarSovani"]

[tool.poetry.dependencies]
python = "^3.9"
d20 = "*"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
"discord.py" = "*"
dnspython = "*"
motor = "*"
numpy = "*"
PyYAML = "*"
setproctitle = "*"
shapely = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.isort]
profile = "black"
force_sort_within_sections = "True"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88

[tool.black]
fast = "True"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "bot",
    "game"
]
